Açteração Cores Esferas - Amarelo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <div class="buttons">
-      <button type="button" id="gravity-btn">Toggle gravity</button>
+      <button type="button" id="gravity-btn">Toggle Gravity</button>
       <button type="button" id="colors-btn">Random colors</button>
     </div>
     <canvas id="webgl-canvas"></canvas>
